<resources>
    <!-- Strings related to start page -->
    <string name="app_name">Articles Hub</string>
    <string name="startPageWelcomeText">Welcome to Articles Hub</string>
    <string name="startPageSignupButton">Sign Up</string>
    <string name="startPageLoginButton">Log In</string>
    <string name="startPageNewUserText">New User?</string>
    <string name="startPageRegUserText">Registered User?</string>
    <string name="title_activity_login_page">Log In</string>

    <!-- Strings related to login page -->
    <string name="prompt_email">Enter your Email</string>
    <string name="prompt_reg_uname">Enter your registered Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Create Account</string>
    <string name="action_sign_up_short">Sign up</string>

    <string name="action_log_in_short">Log in</string>
    <string name="error_invalid_uname">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signin_page">Sign up</string>
    <string name="prompt_username">Choose a username</string>
    <string name="prompt_mo_no">Enter your mobile number</string>
    <string name="select_page_button">Done</string>
    <string name="select_page_instruction">Select your favorite tags to start off a new experience</string>
    <string name="title_activity_home_page">Home Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home_profile_page">Your Profile</string>
    <string name="title_activity_home_about_page">About Us</string>
    <string name="title_activity_home_tags_page">Your Tags</string>
    <string name="title_activity_home_articles_page">Your Articles</string>

    <string name="BASE_URL">https://articleshub.herokuapp.com</string>


    <string name="about_page_description">Articles Hub is a community based web service.
        It provides a platform for all it\'s registered users to write their own articles on any topic of their choice by selecting
        one or more tags from some predefined tags. The users can read articles written by other users and like and comment
        on them as well. More tags will be added as the community grows and the range of different articles widens.\nThe users can
    also browse through the articles and read them without registering as well, but they won\'t be able to write articles, like an
    article or comment on any article without registeration.</string>

    <string name="select_tag_page_search_title">Search here</string>
    <string name="invalid_login_credentials">Invalid Login Credentials</string>
    <string name="prompt_info">Enter your info (Optional)</string>
    <string name="invalid_or_empty_details">Invalid details entered.\nTry selecting a different UserName or different valid Email address</string>
    <string name="string_tag_page_suggestions">Example: Game, Programming, Study, Science, Fashion, News, Movie etc.\nClick on any of the selected tags from the list below to remove that particular tag.</string>
    <string name="tag_req_instruction">Enter a new tag name you can not find and request us to add it for you to use.</string>
    <string name="title_activity_home_comments_page">Your Comments</string>
    <string name="title_activity_home_like_history_page">History</string>

    <!--Question answer strings for the Help Page-->
    <string name="help_page_q1">Q1. What to do if the tag I want to use is not available for selection?</string>
    <string name="help_page_a1">A. If you want to use a tag that is not in our database, you can make a request for adding new tags through our \"About Us\" Page.</string>
    <string name="help_page_q2">Q2. Why is it necessary to select tags to view the articles?</string>
    <string name="help_page_a2">A. We display the articles relevant only to the tags that you have selected to get you best experience.\nFor this we need to know the subjects you like and that is where tags come in the picture.\nWe can select the specific articels and streamline the results as per your interests</string>
    <string name="help_page_q3">Q3. Can I follow other users or see there activity on the forum?</string>
    <string name="help_page_a3">A. Currently there is no functionality to follow other user.\nBut you can see the likes and comments added by them to the articles.\nAlso the articles you read are written by other users themselves</string>
    <string name="help_page_q4">Q4. What are the different tags that i can select?</string>
    <string name="help_page_a4">A. Currently the tags available for selection ar as follows:\nGame, Tutorial, Study, Fashion,
    Story, News, Movie, AI, Future, Book, Programming, Smartphone, Philosophy and Science.</string>
    <string name="help_page_q5">Q5. How to change the username?</string>
    <string name="help_page_a5">A. You cannot change your username as that is the main attribute linking you to your profile on our database</string>
    <string name="title_activity_article_likes_page">ArticleLikesPage</string>
    <string name="title_activity_edit_comment_page">EditCommentPage</string>
    <string name="error_passwords_dont_match">Passwords Do Not Match</string>

</resources>
