<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startPageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    tools:context="com.example.parthdoshi.articleshub.StartPage">

    <TextView
        android:id="@+id/startPageWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startPageWelcomeText"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginTop="82dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/startPageSignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/startPageWelcomeText"
        android:layout_below="@+id/startPageWelcomeText"
        android:layout_marginStart="47dp"
        android:layout_marginTop="138dp"
        android:onClick="signinOnClick"
        android:text="@string/startPageSignupButton" />

    <Button
        android:id="@+id/startPageLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/startPageWelcomeText"
        android:layout_alignTop="@+id/startPageSignupButton"
        android:layout_marginEnd="46dp"
        android:text="@string/startPageLoginButton"
        android:onClick="loginOnClick"/>

    <TextView
        android:id="@+id/startPageNewUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startPageNewUserText"
        android:textColor="#000000"
        android:layout_alignBaseline="@+id/startPageRegUserText"
        android:layout_alignBottom="@+id/startPageRegUserText"
        android:layout_alignStart="@+id/startPageSignupButton"
        android:layout_marginStart="11dp" />

    <TextView
        android:id="@+id/startPageRegUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startPageRegUserText"
        android:textColor="#000000"
        android:layout_above="@+id/startPageLoginButton"
        android:layout_alignEnd="@+id/startPageLoginButton" />
</RelativeLayout>
